# python_import_package_local

./: README.md
my_lib/: pyproject.toml
my_lib/src/: main.py
my_lib/src/my_lib/: __init__.py  my_util.py
my_main_app/: pyproject.toml
my_main_app/src/my_main_app/: main.py
