[project]
name = "my-lib"
version = "0.1.0"
description = ""
authors = [
    {name = "Valery Baranov",email = "v.baranov@integer-soft.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_lib", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
